--- a/WebApp/Client/Pages/Index.razor
+++ b/WebApp/Client/Pages/Index.razor
@@ -10,7 +10,8 @@
         <h3>Καλώς ήρθες, @context.User.Identity.Name !</h3>
     </Authorized>
     <NotAuthorized>
-        <h1>Συνδέσου για να αποκτήσεις πρόσβαση στον διαδραστικό διάλογο.</h1>
+        <h1>Storytelling2Learn: Δημιούργησε, Διάβασε & Μάθε μέσα από Ιστορίες.</h1>
+        <h3>Συνδέσου για να αποκτήσεις πρόσβαση στο Storytelling2Learn</h3>
     </NotAuthorized>
 </AuthorizeView>
 
